frontend/test/should_fail/from_storage_003a.grg
using from_storage;

rule r(ref m:map<NN,NN>, n:NN)
{
	x:N{m[n]} --> y:Node;
	
	modify {
		delete(y);
	}
}

